@@ -13,7 +13,6 @@ plugins {
     id "io.freefair.lombok"
     id 'jacoco'
     id 'java-library'
-    id 'com.diffplug.spotless' version '6.25.0'
 }
 
 ext {
@@ -38,7 +37,7 @@ java {
 }
 
 lombok {
-    version = "1.18.30"
+    version = "1.18.38"
 }
 
 opensearchplugin {
@@ -84,7 +83,7 @@ dependencies {
 	exclude group: 'com.google.errorprone', module: 'error_prone_annotations'
     }
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: "${versions.commonslang}"
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.10.0'
     implementation "org.apache.logging.log4j:log4j-slf4j-impl:2.19.0"
@@ -226,6 +225,7 @@ integTest {
     if (System.getProperty("test.debug") != null) {
         jvmArgs '-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005'
     }
+    jvmArgs '--add-opens', 'java.base/java.time=ALL-UNNAMED'
 
     // Set this to true this if you want to see the logs in the terminal test output.
     // note: if left false the log output will still show in your IDE
@@ -333,13 +333,6 @@ jacocoTestReport {
 
 List<String> jacocoExclusions = [
         // TODO: add more unit test to meet the minimal test coverage.
-        'org.opensearch.ml.constant.CommonValue',
-        'org.opensearch.ml.plugin.MachineLearningPlugin*',
-        'org.opensearch.ml.indices.MLIndicesHandler',
-        'org.opensearch.ml.rest.RestMLPredictionAction',
-        'org.opensearch.ml.profile.MLModelProfile',
-        'org.opensearch.ml.profile.MLPredictRequestStats',
-        'org.opensearch.ml.action.deploy.TransportDeployModelAction',
         'org.opensearch.ml.action.deploy.TransportDeployModelOnNodeAction',
         'org.opensearch.ml.action.undeploy.TransportUndeployModelsAction',
         'org.opensearch.ml.action.prediction.TransportPredictionTaskAction',
@@ -360,7 +353,6 @@ List<String> jacocoExclusions = [
         'org.opensearch.ml.task.MLTrainAndPredictTaskRunner',
         'org.opensearch.ml.task.MLExecuteTaskRunner',
         'org.opensearch.ml.action.profile.MLProfileTransportAction',
-        'org.opensearch.ml.rest.RestMLPredictionAction',
         'org.opensearch.ml.breaker.DiskCircuitBreaker',
         'org.opensearch.ml.autoredeploy.MLModelAutoReDeployer.SearchRequestBuilderFactory',
         'org.opensearch.ml.action.training.TrainingITTests',
@@ -381,7 +373,11 @@ List<String> jacocoExclusions = [
         'org.opensearch.ml.jobs.MLJobRunner',
         'org.opensearch.ml.utils.ParseUtils',
         'org.opensearch.ml.jobs.processors.MLStatsJobProcessor',
-        'org.opensearch.ml.jobs.processors.MLJobProcessor'
+        'org.opensearch.ml.jobs.processors.MLJobProcessor',
+        'org.opensearch.ml.action.memorycontainer.memory.TransportAddMemoriesAction',
+        'org.opensearch.ml.action.memorycontainer.memory.TransportAddMemoriesAction.*',
+        'org.opensearch.ml.rest.RestMLDeleteMemoryAction',
+        'org.opensearch.ml.rest.RestMLDeleteMemoryAction.*'
 ]
 
 jacocoTestCoverageVerification {
@@ -411,7 +407,7 @@ check.dependsOn jacocoTestCoverageVerification
 configurations.all {
     exclude group: "org.jetbrains", module: "annotations"
     exclude group: "com.google.guava", module: "failureaccess"
-    resolutionStrategy.force 'org.apache.commons:commons-lang3:3.10'
+    resolutionStrategy.force "org.apache.commons:commons-lang3:${versions.commonslang}"
     resolutionStrategy.force 'commons-logging:commons-logging:1.2'
     resolutionStrategy.force 'org.objenesis:objenesis:3.2'
     resolutionStrategy.force 'net.java.dev.jna:jna:5.11.0'
@@ -433,6 +429,7 @@ configurations.all {
     resolutionStrategy.force "org.opensearch:opensearch:${opensearch_version}"
     resolutionStrategy.force "org.bouncycastle:bcprov-jdk18on:1.78.1"
     resolutionStrategy.force 'io.projectreactor:reactor-core:3.7.0'
+    resolutionStrategy.force 'commons-beanutils:commons-beanutils:1.11.0'
 }
 
 apply plugin: 'com.netflix.nebula.ospackage'
@@ -481,15 +478,6 @@ afterEvaluate {
 
     task buildPackages(type: GradleBuild) {
         tasks = ['build', 'buildRpm', 'buildDeb']
-    }
-}
-
-spotless {
-    java {
-        removeUnusedImports()
-        importOrder 'java', 'javax', 'org', 'com'
-
-        eclipse().withP2Mirrors(Map.of("https://download.eclipse.org/", "https://mirror.umd.edu/eclipse/")).configFile rootProject.file('.eclipseformat.xml')
     }
 }
 
@@ -661,13 +649,4 @@ task bwcTestSuite(type: StandaloneRestIntegTestTask) {
 forbiddenPatterns {
     exclude '**/*.pdf'
     exclude '**/*.jpg'
-}
-
-configurations {
-    runtimeClasspath {
-        resolutionStrategy {
-            // CVE-48734: tribuo-clustering-kmeans:'4.2.1 causes a transitive dependency on beanutils:1.94
-            force 'commons-beanutils:commons-beanutils:1.11.0'
-        }
-    }
 }
